# Big-Integer

./: .gitignore  CMakeLists.txt  readme.md  todo
source/: bigint.c  bigint.h  console.c  console.h  main.c
source/millerRabin/: millerrabin.c  millerrabin.h  prng.c  prng.h
source/tests/: __init__.py  all.py  arithmetic.py  assignment.py  bitwise.py  millerrabin.py  util.py
